MyProject/GpMessages/1582191426525600
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, April 1, 2024 4:11:04 PM</msg><msg code="-2147467259" type="100">  File "D:\working\xml_to_layer.py", line 251
    add_message(f"pls{item["sec_no"]}")
                            ^
SyntaxError: f-string: unmatched '['
</msg><msg code="0" type="0">Failed script Script...</msg><msg code="-2147467259" type="100">Failed to execute (Script).</msg><msg code="0" type="3">Failed at Monday, April 1, 2024 4:11:04 PM (Elapsed Time: 0.20 seconds)</msg></messages>